; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/executor/extr_nodeTidscan.c_itemptr_comparator.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/executor/extr_nodeTidscan.c_itemptr_comparator.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @itemptr_comparator to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @itemptr_comparator(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = bitcast i8* %12 to i32*
  store i32* %13, i32** %6, align 8
  %14 = load i8*, i8** %5, align 8
  %15 = bitcast i8* %14 to i32*
  store i32* %15, i32** %7, align 8
  %16 = load i32*, i32** %6, align 8
  %17 = call i64 @ItemPointerGetBlockNumber(i32* %16)
  store i64 %17, i64* %8, align 8
  %18 = load i32*, i32** %7, align 8
  %19 = call i64 @ItemPointerGetBlockNumber(i32* %18)
  store i64 %19, i64* %9, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = call i64 @ItemPointerGetOffsetNumber(i32* %20)
  store i64 %21, i64* %10, align 8
  %22 = load i32*, i32** %7, align 8
  %23 = call i64 @ItemPointerGetOffsetNumber(i32* %22)
  store i64 %23, i64* %11, align 8
  %24 = load i64, i64* %8, align 8
  %25 = load i64, i64* %9, align 8
  %26 = icmp slt i64 %24, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %44

28:                                               ; preds = %2
  %29 = load i64, i64* %8, align 8
  %30 = load i64, i64* %9, align 8
  %31 = icmp sgt i64 %29, %30
  br i1 %31, label %32, label %33

32:                                               ; preds = %28
  store i32 1, i32* %3, align 4
  br label %44

33:                                               ; preds = %28
  %34 = load i64, i64* %10, align 8
  %35 = load i64, i64* %11, align 8
  %36 = icmp slt i64 %34, %35
  br i1 %36, label %37, label %38

37:                                               ; preds = %33
  store i32 -1, i32* %3, align 4
  br label %44

38:                                               ; preds = %33
  %39 = load i64, i64* %10, align 8
  %40 = load i64, i64* %11, align 8
  %41 = icmp sgt i64 %39, %40
  br i1 %41, label %42, label %43

42:                                               ; preds = %38
  store i32 1, i32* %3, align 4
  br label %44

43:                                               ; preds = %38
  store i32 0, i32* %3, align 4
  br label %44

44:                                               ; preds = %43, %42, %37, %32, %27
  %45 = load i32, i32* %3, align 4
  ret i32 %45
}

declare dso_local i64 @ItemPointerGetBlockNumber(i32*) #1

declare dso_local i64 @ItemPointerGetOffsetNumber(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
